chore: add favicon and metadata

--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/calculator_favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>how-old</title>
+    <title>몇살이지 - 한국 나이 계산기</title>
+
+    <!-- 기본 메타 태그 -->
+    <meta
+      name="description"
+      content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
+    />
+
+    <!-- Open Graph (페이스북, 카카오톡 등) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="몇살이지 - 한국 나이 계산기" />
+    <meta
+      property="og:description"
+      content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
+    />
+    <meta property="og:image" content="/how-old-og.png" />
+    <meta property="og:url" content="https://how-old-kr.vercel.app/" />
+
+    <!-- Twitter 카드 -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="몇살이지 - 한국 나이 계산기" />
+    <meta
+      name="twitter:description"
+      content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
+    />
+    <meta name="twitter:image" content="/how-old-og.png" />
   </head>
   <body>
     <div id="root"></div>
