--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
     />
 
+    <!-- Google Search Console -->
+    <meta
+      name="google-site-verification"
+      content="MrXMvtxqxYirVsEo1s_0kadHZja0G6_3nFjHGw79Dgc"
+    />
+
     <!-- Open Graph (페이스북, 카카오톡 등) -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="몇살이지 - 한국 나이 계산기" />
