feat: add Google Analytics

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
       content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
     />
     <meta name="twitter:image" content="/how-old-og.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-RZE23HNQ4Y"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-RZE23HNQ4Y");
+    </script>
   </head>
   <body>
     <div id="root"></div>
