--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- 기본 메타 태그 -->
     <meta
       name="description"
-      content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
+      content="한국 나이 계산기, 만 나이, 빠른년생, 나이로 생년 역계산 등"
     />
 
     <!-- Google Search Console -->
@@ -23,7 +23,7 @@
     <meta property="og:title" content="몇살이지 - 한국 나이 계산기" />
     <meta
       property="og:description"
-      content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
+      content="한국 나이 계산기, 만 나이, 빠른년생, 나이로 생년 역계산 등"
     />
     <meta property="og:image" content="/how-old-og.png" />
     <meta property="og:url" content="https://how-old-kr.vercel.app/" />
@@ -33,7 +33,7 @@
     <meta name="twitter:title" content="몇살이지 - 한국 나이 계산기" />
     <meta
       name="twitter:description"
-      content="한국 나이 계산기, 만 나이, 빠른 옵션 등"
+      content="한국 나이 계산기, 만 나이, 빠른년생, 나이로 생년 역계산 등"
     />
     <meta name="twitter:image" content="/how-old-og.png" />
 
